# DPP

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG  CHANGELOG.md  CMakeLists.txt  DPP.cppcheck  Doxyfile  INSTALL.md  LICENSE  LICENSE-DYLIB  README.md  build-msvc.cmd  build.cmd  compile-time-errors.txt  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yml  build_windows_latest.yml  ci.yml  linux.yml  windows.yml
doc/: compiler.rule.txt  env make.txt  index.md
docs/: README.md  index.html
examples/: enum.dpp  enum.dpp.dppo  function.dpp  goto.dpp  loop.dpp  new-delete.dpp  operators.dpp  test.dpp  tests.json  typedef.dpp  variable.dpp  when.dpp  with.dpp
examples/Waitlist/: function.dpp  goto.dpp  loop.dpp
examples/compiler/: enum.dpp  function.dpp  import.dpp  operators.dpp  test.dpp  tests.json  variable.dpp  with.dpp
examples/compiler/Waitlist/: with.dpp
include/: acassert.h  acdpp.h  antlr4-common.h  antlr4-runtime.h  array.hpp  builtin.hpp  compileinfos.h  compiler.hpp  config.h.in  dylib.hpp  enum.hpp  error.hpp  export.h  flags.hpp  fmt.h  heap.hpp  import.h  library.hpp  locales.hpp  macros.hpp  native.hpp  objects.hpp  opcodes.hpp  paths.hpp  searcher.hpp  serialize.hpp  struct.hpp  vm.hpp
include/acoder/: acassert.h
include/acoder/acassert/: acassert.cpp  acassert.h
include/antlr4/: ANTLRErrorListener.h  ANTLRErrorStrategy.h  ANTLRFileStream.h  ANTLRInputStream.h  BailErrorStrategy.h  BaseErrorListener.h  BufferedTokenStream.h  CharStream.h  CommonToken.h  CommonTokenFactory.h  CommonTokenStream.h  ConsoleErrorListener.h  DefaultErrorStrategy.h  DiagnosticErrorListener.h  Exceptions.h  FailedPredicateException.h  FlatHashMap.h  FlatHashSet.h  InputMismatchException.h  IntStream.h  InterpreterRuleContext.h  Lexer.h  LexerInterpreter.h  LexerNoViableAltException.h  ListTokenSource.h  NoViableAltException.h  Parser.h  ParserInterpreter.h  ParserRuleContext.h  ProxyErrorListener.h  RecognitionException.h  Recognizer.h  RuleContext.h  RuleContextWithAltNum.h  RuntimeMetaData.h  Token.h  TokenFactory.h  TokenSource.h  TokenStream.h  TokenStreamRewriter.h  (+6 more)
include/antlr4/atn/: ATN.h  ATNConfig.h  ATNConfigSet.h  ATNDeserializationOptions.h  ATNDeserializer.h  ATNSimulator.h  ATNState.h  ATNStateType.h  ATNType.h  ActionTransition.h  AmbiguityInfo.h  ArrayPredictionContext.h  AtomTransition.h  BasicBlockStartState.h  BasicState.h  BlockEndState.h  BlockStartState.h  ContextSensitivityInfo.h  DecisionEventInfo.h  DecisionInfo.h  DecisionState.h  EpsilonTransition.h  ErrorInfo.h  HashUtils.h  LL1Analyzer.h  LexerATNConfig.h  LexerATNSimulator.h  LexerAction.h  LexerActionExecutor.h  LexerActionType.h  LexerChannelAction.h  LexerCustomAction.h  LexerIndexedCustomAction.h  LexerModeAction.h  LexerMoreAction.h  LexerPopModeAction.h  LexerPushModeAction.h  LexerSkipAction.h  LexerTypeAction.h  LookaheadEventInfo.h  (+34 more)
include/antlr4/dfa/: DFA.h  DFASerializer.h  DFAState.h  LexerDFASerializer.h
include/antlr4/internal/: Synchronization.h
include/antlr4/misc/: InterpreterDataReader.h  Interval.h  IntervalSet.h  MurmurHash.h  Predicate.h
include/antlr4/support/: Any.h  Arrays.h  BitSet.h  CPPUtils.h  Casts.h  Declarations.h  StringUtils.h  Unicode.h  Utf8.h
include/antlr4/tree/: AbstractParseTreeVisitor.h  ErrorNode.h  ErrorNodeImpl.h  IterativeParseTreeWalker.h  ParseTree.h  ParseTreeListener.h  ParseTreeProperty.h  ParseTreeType.h  ParseTreeVisitor.h  ParseTreeWalker.h  TerminalNode.h  TerminalNodeImpl.h  Trees.h
include/dpp/: api.h  configs.h  defines.h  plugins.h
include/dxx/: api.h
include/parserbase/: DXXParserBase.cpp  DXXParserBase.h
include/test/: acassert.test.cpp
libs/cppnative/: CMakeLists.txt
libs/cppnative/io/: io.cpp  io.h
scripts/: CMakeLists.txt  Makefile  cmake_install.cmake  dnf.sh  venv.bat  venv.ps1  venv.sh
src/: CMakeLists.txt  dpp.cpp
src/benchmarks/: benchmark.cpp
src/compiler/: DXXLexer.cpp  DXXLexer.h  DXXLexer.tokens  DXXParser.cpp  DXXParser.h  DXXParser.interp  DXXParserBaseVisitor.cpp  DXXParserBaseVisitor.h  DXXParserVisitor.cpp  DXXParserVisitor.h  compiler.cpp  compiler.exp  compiler.h  compiler.hpp  compiletime.h  errors.hpp  metadata.h  rebuild-template.bat  rebuild-templates.bat
src/compiler/antlr4/: DXXLexer.cpp  DXXLexer.h  DXXLexer.interp  DXXLexer.tokens  DXXParser.cpp  DXXParser.h  DXXParser.interp  DXXParser.tokens  DXXParserBaseListener.cpp  DXXParserBaseListener.h  DXXParserBaseVisitor.h  DXXParserListener.cpp  DXXParserListener.h  DXXParserVisitor.h  README
src/compiler/templates/: DXXLexer.g4  DXXParser.g4
src/compiler/test/: test.cpp
src/configs/: configs.h
src/main/: config.h  debug.cpp  dpp.cpp  modules.h
src/plugins/: README.md  venv.cpp  venv.h
src/runtime/: acdpp.h  array.hpp  builtin.cpp  builtin.h  builtin.hpp  builtin.symbols.hpp  enum.h  enum.hpp  error.cpp  error.hpp  heap.hpp  macros.h  macros.hpp  native.cpp  native.h  native.hpp  objects.cpp  objects.h  objects.hpp  opcodes.cpp  opcodes.h  opcodes.hpp  register.cpp  register.h  register.hpp  set.hpp  stdrt.cpp  stdrt.h  stdrt.hpp  struct.cpp  struct.h  struct.hpp  vm.cpp  vm.h  vm.hpp
src/runtime/compilers/: msvc.h
src/runtime/error/: error.cpp  error.h
src/runtime/test/: CMakeLists.txt  Makefile  dir  dll.cpp  rt-test-add.cpp  rt-test-and.cpp  rt-test-band.cpp  rt-test-bigger.cpp  rt-test-bneg.cpp  rt-test-bor.cpp  rt-test-bxor.cpp  rt-test-call-ret.cpp  rt-test-calln.cpp  rt-test-div.cpp  rt-test-eq.cpp  rt-test-jmp.cpp  rt-test-mod.cpp  rt-test-mov.cpp  rt-test-mul.cpp  rt-test-new.cpp  rt-test-not.cpp  rt-test-or.cpp  rt-test-pushe-pope.cpp  rt-test-shl.cpp  rt-test-shr.cpp  rt-test-sign.cpp  rt-test-smaller.cpp  rt-test-sub.cpp  rt_test.hpp  test.cpp
src/serialization/: Serialization.cpp  Serialization.hpp
src/std/io/: io.cpp  io.h
src/tests/: test.cpp
tools/: build.py  clean.py  get_all_antlr4_files.py  pack.py  run_all_tests.py
tools/setup/: setup.iss
(+19 files in other folders)
